# docker-pre-commit

./: .drone.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  compose-check.sh  hadolint-deprecation.sh  hooks.yaml  pyproject.toml
.gitea/workflows/: build.yml
tests/: docker-compose.bad.yml  docker-compose.yml
